--- a/public/index.html
+++ b/public/index.html
@@ -6,10 +6,74 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <link rel="stylesheet" href="css/style.css">
+    <!-- Boxiocns CDN Link -->
+    <link href='https://unpkg.com/boxicons@2.0.7/css/boxicons.min.css' rel='stylesheet'>
     <title>Document</title>
 </head>
-<body>
-    <h1 class="text-5xl font-bold text-blue-200">Hallo Halim ok</h1>
-    
+<body class="">
+    <div class="w-screen h-screen flex fixed">
+        <div class="box-border rounded-xl relative m-5 flex-none w-56 text-cyan-50 bg-slate-900 transition-all duration-[0.5s] ease-in-out">
+            <div class="absolute z-50 rounded-t-xl flex top-0 pl-4 py-5 w-full bg-slate-900">
+                <i class='bx bxl-c-plus-plus text-4xl mr-3'></i>
+                <span class="text-2xl">CodingLab</span>
+            </div>
+
+            <ul class="absolute h-full w-full pt-20 pb-20 overflow-auto">
+
+                <li class="py-3 hover:bg-slate-700">
+                    <a href="#" class="flex pl-6 ">
+                        <i class='bx bx-grid-alt text-2xl mr-4' ></i>
+                        <span class="">Dashboard</span>
+                    </a>
+                    <ul class="pl-16 bg-slate-700">
+                        <!-- <li><a class="" href="#">Dashboard</a></li> -->
+                    </ul>
+                </li>
+
+                <li class="py-3 hover:bg-slate-700">
+                    <div class="pl-6">
+                        <a href="#" class="flex items-center justify-center">
+                            <i class='bx bx-collection text-2xl mr-4' ></i>
+                            <span class="">Category</span>
+                            <i class='grow text-center bx bxs-chevron-down text-lg' ></i>
+                        </a>
+                    </div>
+                    <ul class="pl-16 bg-slate-700 hidden">
+                        <!-- <li><a class="" href="#">Category</a></li> -->
+                        <li><a href="#">HTML & CSS</a></li>
+                        <li><a href="#">JavaScript</a></li>
+                        <li><a href="#">PHP & MySQL</a></li>
+                    </ul>
+                </li>
+
+            </ul>
+
+            <div class="absolute z-50 rounded-b-xl flex bottom-0 pl-4 py-5 w-full bg-slate-600">
+                <div class="flex items-center justify-center  w-full">
+                    <div class="flex-initial w-10 h-10 bg-slate-600 rounded bg-cover" style="background-image: url(../src/img/profile.jpg)">
+                    </div>
+                    <div class="grow text-center">
+                        <div class="text-lg">Prem Shahi</div>
+                        <div class="text-xs">Web Desginer</div>
+                    </div>
+                    <i class='grow text-center text-xl bx bx-log-out' ></i>
+                </div>
+            </div>
+
+        </div>
+
+        <div class="w-full flex flex-col">
+            <section class="p-4 flexbg-slate-400">
+                <div class="">
+                    <i class='bx bx-menu text-3xl' ></i>
+                    <span class="text-black text-2xl">Drop Down Sidebar</span>
+                </div>
+            </section>
+            <div class="p-4 overflow-auto h-full w-full bg-blue-400">
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto reiciendis beatae nihil repellendus asperiores, iure maxime magnam aspernatur eaque, veritatis recusandae? Aliquid, labore. Ab ut accusamus dolorum molestias eius quo at ea saepe, suscipit aut aspernatur quos odio quam corporis dolore temporibus neque maxime reiciendis fuga vitae! Odit commodi maxime, expedita corporis officia quasi facere officiis facilis reprehenderit ipsam illo nisi corrupti? Atque quis dolorem molestias delectus magnam repellendus fugit explicabo tenetur mollitia nulla voluptatum, quas minima, saepe perferendis molestiae maiores ad quo voluptatibus laborum totam nam debitis. Eos amet dignissimos beatae, aliquam quidem magni, eaque quam ex doloribus temporibus facilis dicta adipisci ipsam molestiae obcaecati eius hic, dolor doloremque quas reiciendis assumenda fuga vel? Tenetur quis voluptates, autem cum perferendis laudantium exercitationem dolorum ipsa maxime quod eum accusamus nisi qui consequatur minus, vitae quia adipisci aspernatur expedita unde! Fugit iste id perspiciatis qui quibusdam totam alias dolorem, provident, libero tempora quis sequi doloribus corporis asperiores! Saepe, itaque, libero error in distinctio architecto asperiores minus dolore nostrum quaerat quia. Laborum nam expedita iure aspernatur quod, tenetur fuga sit similique suscipit cum dolores quae quaerat voluptate esse rerum, molestias hic eum voluptas alias facilis quam ducimus magnam! Consequatur qui, quo vitae ducimus temporibus iusto eum inventore animi ipsum? Voluptatibus doloremque exercitationem molestiae quisquam atque eius officia, soluta labore iusto deleniti consequuntur ipsum enim libero saepe, consequatur quos doloribus perspiciatis placeat at facilis et cumque voluptatem. Deleniti non pariatur minus mollitia dolorem modi, aperiam sapiente blanditiis unde ratione aliquid expedita necessitatibus debitis. Magni nesciunt consectetur cupiditate, ipsum recusandae sit enim iure voluptas! Quod suscipit recusandae, facilis maiores numquam corrupti aut! Totam consectetur asperiores porro autem ea quas distinctio? Velit quas nemo repellat nulla reiciendis dicta obcaecati doloribus nobis ea, a eius quos cupiditate expedita provident laborum in temporibus ipsum autem iusto aut architecto. Sequi similique quidem possimus impedit omnis, quod corrupti sint incidunt beatae necessitatibus! Laudantium saepe eveniet iure, fuga adipisci natus quas facere ipsa velit placeat ipsum aspernatur qui quam minima sequi, totam exercitationem quibusdam voluptatibus, doloribus magni aliquam eligendi possimus. Omnis necessitatibus earum iusto magnam, quasi labore molestiae non at nemo deserunt distinctio voluptas dolor numquam minus hic. Earum, deserunt. Quia repudiandae expedita dolorem pariatur iste modi corrupti ducimus, minima voluptate in animi id? Voluptas dolor vitae enim quos ducimus expedita rem officiis doloribus molestiae itaque labore magni ipsa praesentium neque quaerat exercitationem, in culpa eligendi obcaecati nesciunt, dignissimos, provident repudiandae. Ducimus sed beatae fuga veritatis quas, incidunt animi similique eius nisi aut nemo temporibus vel! Iure asperiores exercitationem cum vero nihil dicta earum officia nobis, vel magnam animi provident voluptatum iste ex autem fugiat ratione pariatur adipisci, a nulla? Veniam ipsum eligendi minus id atque non odio eos deleniti accusamus facere. Delectus, cum sapiente nulla commodi porro quod expedita iure ea, totam eligendi incidunt voluptate officiis itaque consequatur ipsam numquam at quo nostrum velit. Harum facilis quod sed sapiente saepe repudiandae omnis minus atque porro? Incidunt ratione quos facere ut suscipit fugiat molestias illo odio. Ipsum odit dolorum corporis, molestias ducimus neque labore voluptates commodi distinctio dolor alias illo quis sequi dolores? Dolor sapiente accusamus voluptates quia doloremque! Molestiae iste nemo tenetur sapiente aliquam neque praesentium id magni hic harum porro eum officiis quis modi, error dolore natus ad, quod quae eius consequuntur minima dolorum eaque ipsa. Provident incidunt cupiditate quos autem sapiente libero nostrum eaque, sint minus omnis tempora voluptas vel recusandae enim officiis nobis eum repudiandae a. Quae dolores obcaecati optio adipisci reiciendis nihil necessitatibus dolorum autem suscipit accusamus ut non provident saepe vel distinctio, aut fugiat doloremque perferendis quasi dignissimos asperiores voluptate deleniti architecto sunt. Voluptates optio, laudantium doloribus repellendus placeat error? Tenetur mollitia rerum deserunt voluptates dolores cupiditate aspernatur ullam doloremque libero ipsum porro, amet minus voluptatem consequatur voluptatum laudantium obcaecati voluptatibus! Sunt eius ipsam esse quam dicta, adipisci beatae quos aliquid eveniet praesentium iste et similique. Nesciunt odit neque quo doloribus architecto ea cupiditate magnam, repudiandae tempore in adipisci quam reprehenderit perferendis recusandae quod animi natus nisi labore? Facere necessitatibus ipsum consectetur totam explicabo quia tempora repellat iusto deleniti ratione. Sunt aliquid, quos natus quasi laboriosam enim blanditiis sint officia voluptates quis exercitationem quia. Eveniet molestias velit tempora neque aut totam molestiae quia, animi, maxime ipsum atque cum laboriosam sapiente necessitatibus. Enim eum totam laudantium beatae sequi error dolorum? Corrupti ducimus ea temporibus eos, quo aliquid, autem magni, reiciendis sunt esse inventore vitae. Velit omnis voluptate, nobis porro magnam quia enim rem laudantium, corrupti neque, perferendis maxime id eligendi? Aut sed sit repellendus reprehenderit esse velit accusantium incidunt qui distinctio ea. Nesciunt beatae, quae placeat illum numquam excepturi ex laboriosam a minus! Non eligendi nihil, saepe nisi voluptatibus maiores, vero quas id tempora dolorum aspernatur assumenda ab aliquid officiis perspiciatis! Tempora adipisci quos eos obcaecati, numquam doloremque excepturi saepe repellat aut sint, dignissimos amet fugiat voluptas. Voluptates error est magnam temporibus ipsam reprehenderit quos soluta quaerat rem, accusantium sint deserunt non. Illo distinctio placeat ullam magnam sequi quas! Alias commodi accusamus libero officiis veniam eligendi nam animi temporibus vero quos. Unde dicta blanditiis, ipsa eligendi esse distinctio culpa vitae totam, pariatur dolorum harum itaque adipisci officiis cum fugit voluptas quas iure quam doloremque quia voluptatum aspernatur cumque maxime. Vero mollitia error quos cumque? Porro, possimus excepturi dolorum dignissimos, nisi mollitia ipsam dolores itaque animi nemo eveniet officia minus fugit, culpa quaerat non commodi. Labore ut deleniti, illo obcaecati iusto perferendis a quaerat corporis rem laboriosam! Id tenetur numquam a necessitatibus doloremque! Quod, suscipit accusantium? Vitae harum doloribus iure minima iste, facilis ipsa magni officiis nesciunt tempora quam hic ducimus ex et esse repudiandae in! Natus, a doloremque explicabo non excepturi fugiat ullam maiores veniam magni. Natus cum nostrum velit quidem modi veniam, deserunt quas non eligendi assumenda libero, voluptatem quae ab sint mollitia provident! Odit qui sunt similique, necessitatibus nemo corrupti beatae quos nisi possimus quidem cupiditate placeat ex doloremque consequatur laboriosam dolorum saepe impedit error reprehenderit autem eum esse! Hic nam tempore deserunt modi omnis voluptate dolore, ullam rerum minima. Sed, quam recusandae.</p>
+            </div>
+        </div>
+
+    </div>
 </body>
 </html>
